--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo512_v2.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
