--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,9 +9,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo512.png",
+      "src": "logo_v2.png",
       "type": "image/png",
-      "sizes": "512x512",
+      "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
