--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/react": "19.1.13",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^15.5.4",
     "postcss": "8.4.39",
     "tailwindcss": "3.4.10"
   }
