--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,23 @@
-{
-  "extends": [
-    "next/core-web-vitals",
-    "next/typescript"
-  ]
-}
+const nextEslintConfig = require('next/eslint-config-next');
+
+module.exports = [
+  ...nextEslintConfig,
+  {
+    rules: {
+      '@typescript-eslint/no-unused-vars': [
+        'warn',
+        { 
+          'argsIgnorePattern': '^_',
+          'varsIgnorePattern': '^_',
+          'caughtErrorsIgnorePattern': '^_'
+        }
+      ],
+      'react/no-unescaped-entities': [
+        'error',
+        {
+          'forbid': ['>', '"', '}'] // Only forbid these, allow apostrophes
+        }
+      ]
+    },
+  },
+];
