--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "firebase": "^12.2.1",
-    "next": "^15.5.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "15.5.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-signature-canvas": "^1.1.0-alpha.2",
-    "supabase": "^2.40.7"
+    "react-signature-canvas": "^1.1.0"
   },
   "devDependencies": {
-    "@types/react": "19.1.13",
-    "autoprefixer": "10.4.19",
-    "eslint": "8.57.0",
-    "eslint-config-next": "^15.5.4",
-    "postcss": "8.4.39",
-    "tailwindcss": "3.4.10"
+    "@types/react": "^19.1.13",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "15.5.4",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.10"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
